# video-cook

./: .gitignore  LICENSE  README.md  cook.py  pyproject.toml  test_cook.py
.github/workflows/: publish.yml
scripts/: install.ps1  install.sh
