[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "video-cook"
version = "0.1.0"
description = "Deterministic executor for the video-cooking skill pipeline. Handles yt-dlp download, whisperX transcription, ffmpeg burn, and mechanical shipment verification — so agents don't hand-assemble long commands."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "ChHsiching"}]
keywords = ["yt-dlp", "whisperx", "ffmpeg", "subtitles", "video", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Multimedia :: Video",
]
dependencies = []

[project.optional-dependencies]
# Heavy deps that only some subcommands need. Install with:
#   pip install video-cook[download]    # for cook download
#   pip install video-cook[transcribe]  # for cook transcribe
#   pip install video-cook[all]         # everything
download = ["yt-dlp>=2026.7.9"]
transcribe = ["whisperx>=3.8.0"]
all = ["yt-dlp>=2026.7.9", "whisperx>=3.8.0"]
dev = ["pytest>=7"]

[project.scripts]
cook = "cook:main"

[project.urls]
Homepage = "https://github.com/ChHsiching/video-cook"
Repository = "https://github.com/ChHsiching/video-cook"

[tool.setuptools]
py-modules = ["cook"]

[tool.pytest.ini_options]
testpaths = ["."]
